<resources>
    <string name="app_name">Auttar POC</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="configBtn">Config</string>
    <string name="loginBtn">Login</string>
    <string name="confTransa">Conf. Trans.</string>
    <string name="pagarCC">Crédito a Vista</string>
    <string name="pagarCC2">A vista 2 CCs</string>
    <string name="pagarCCPrazo">Crédito a Prazo</string>
    <string name="pagarCDPrazo">Deb Pre Dat Banri</string>
    <string name="pagarCCBanri">Cred Banri</string>
    <string name="pagarCD">Débito</string>
    <string name="configPinpad">Config Pinpad</string>
    <string name="iniciarDia">Iniciar DIA</string>
    <string name="autoConfirm">Autoconfirmação</string>
    <string name="valor">valor</string>
    <string name="parcelas">parcelas</string>
</resources>